--- a/11.dynamicprogramming2/.vscode/settings.json
+++ b/11.dynamicprogramming2/.vscode/settings.json
@@ -11,8 +11,6 @@
     "iosfwd": "cpp",
     "new": "cpp",
     "chrono": "cpp",
-    "ostream": "cpp",
-    "map": "cpp",
-    "unordered_map": "cpp"
+    "ostream": "cpp"
   },
 }
