--- a/9.hashtable/.vscode/settings.json
+++ b/9.hashtable/.vscode/settings.json
@@ -13,6 +13,7 @@
     "chrono": "cpp",
     "ostream": "cpp",
     "map": "cpp",
-    "unordered_map": "cpp"
+    "unordered_map": "cpp",
+    "unordered_set": "cpp"
   },
 }
